# QPT_final_project

ROOBOTARM_team/: README.md  main_QRcode_(clinet).py  ros_robotarm_pub.py
ROOBOTARM_team/robot_con/: app.py  camera_test.py  gipper_reset.py  main.py  reset.py  test.py  webcam.py  website_create.html
ROOBOTARM_team/yolov8_model/: assessment_webcam.py  move_cen.py
ros2_ws/src/agv_control_py/: package.xml   setup.cfg  setup.py
ros2_ws/src/agv_control_py/agv_control_py/: adaptive_odom_with_yaw.py  agv_controller_node.py   ar_marker.py.save  yaw_publish.py 
ydlidar_ws/src/jdamr200_node/: package.xml  setup.cfg  setup.py
ydlidar_ws/src/jdamr200_node/jdamr200_node/: jdamr200_node.py
ydlidar_ws/src/myagv_bringup/launch/: myagv.launch.py
ydlidar_ws/src/myagv_description/: CMakeLists.txt  package.xml  urdf.rviz
ydlidar_ws/src/myagv_description/config/: joint_names_aseembly.yaml
ydlidar_ws/src/myagv_description/launch/: display.launch.py  display_s.launch.py  gazebo.launch  robot_state_publisher.launch.py  transform_publisher.launch.py
ydlidar_ws/src/myagv_description/meshes/: base_link.STL  lidar_link.STL  wheele1_link.STL  wheele2_link.STL  wheele3_link.STL  wheele4_link.STL
ydlidar_ws/src/myagv_description/urdf/: myagv_description.csv  myagv_description.urdf
ydlidar_ws/src/myagv_navigation2/launch/: navigation2.launch.py
ydlidar_ws/src/myagv_navigation2/map/: map.pgm  map.yaml
ydlidar_ws/src/myagv_navigation2/param/: myagv.yaml
ydlidar_ws/src/ydlidar_ros2_driver/: CMakeLists.txt
ydlidar_ws/src/ydlidar_ros2_driver/config/: ydlidar_cartographer.lua  (+1 more)
(+4 files in other folders)
