<package format="3">
  <name>myagv_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for myagv_description.
    This package contains configuration data, 3D models, and launch files for the myagv_description robot.
  </description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_ros</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <exec_depend>ament_cmake_ros</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
